Unified structure of build.gradle.kts files & rollback version to 2.38 (latest available in maven central)
Signed-off-by: Dmitrii Kotov <dmitrii.kotov@jetbrains.com>